# agentic-trading

./: .gitignore  README.md  pyproject.toml
apps/web/: .env.example  README.md  next.config.ts  package-lock.json  package.json
docs/: technical_foundation_vendor_plan.md  tqqq_regime_switch_runbook.md
docs/architecture/: research_website_boundary.md  website_technical_foundation.md
docs/contracts/: research_artifact_contract.md
docs/decisions/: ADR-0001-precomputed-artifacts-not-live-backtests.md
docs/product/: website_product_prd.md
docs/runbooks/: publish_research_artifact.md
reports/quant_exit_strategy_search/: README.md
reports/tqqq_strategy_1/: README.md  TQQQ_strategy_1_backtest_chart.html  TQQQ_strategy_1_backtest_report.md  TQQQ_strategy_1_backtest_summary.json  TQQQ_strategy_1_price_data.csv  TQQQ_strategy_1_trade_log.csv
reports/tqqq_strategy_1_cash_variant/: README.md  TQQQ_strategy_1_cash_variant_report.md  TQQQ_strategy_1_cash_variant_summary.json  TQQQ_strategy_1_cash_variant_trade_log.csv
schemas/: research_artifact.schema.json
scripts/: render_tqqq_backtest_chart.py  tqqq_regime_backtest_report.py  tqqq_strategy_1_cash_variant_report.py
src/agentic_trading/: __init__.py  cli.py  (+4 more)
strategies/: etf_bollinger_rsi_mean_reversion.yaml  tqqq_regime_switch.yaml
supabase/: README.md
tests/: test_backtest.py  test_etf_bollinger_rsi_mean_reversion.py  test_indicators.py  test_price_data.py  test_research_artifact_contract.py  test_tqqq_regime_switch.py
web/: README.md
website/: README.md  app.js  index.html  smoke-test.mjs  styles.css
(+26 files in other folders)
