[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-trading"
version = "0.1.0"
description = "Agentic trading workflows and strategy-as-code experiments."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "muchaott"}]
dependencies = []

[project.optional-dependencies]
data = ["yfinance>=0.2.40"]
dev = ["pytest>=8.0"]

[project.scripts]
agentic-trading = "agentic_trading.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
